# terrasense

./: README.md
cad/: Box.ipt  Box_Assembly.iam  Double_Steckdose.ipt  Kaltstecker.ipt  LV_Deckel.ipt  PSU.ipt  Steckdose.ipt  Steckdosen_Block.ipt
cad/hv_pcb/: high_volt_switch_PCB.ipt  hv_pcb.iam
cad/main_pcb/: main_pcb.iam  terrasense_PCB.ipt
firmware/: .gitignore  README.md
firmware/.devcontainer/: Dockerfile
firmware/components/actors/: CMakeLists.txt
firmware/components/app_logic/: CMakeLists.txt  app_logic_crawl_cay.c  app_logic_test.c
firmware/components/net_mqtt/: CMakeLists.txt  README.md  hass_discovery.c
firmware/components/net_zigbee/: net_zigbee.c
firmware/components/sensors/: sensor_binary.c  sensor_binary.h  sensor_ds18b20.h  sensor_sht3x.c  sensor_sht3x.h
firmware/components/sys_config/: mqtt_namingscheme.md
firmware/components/sys_utils/: CMakeLists.txt  idf_component.yml
firmware/main/: CMakeLists.txt  main.c
newFirmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
newFirmware/components/actors/: CMakeLists.txt  actor_fan.c  actors.c  gpio_switch.c
newFirmware/components/app_logic/: CMakeLists.txt  app_logic.c  app_logic_crawl_cay.c  idf_component.yml
newFirmware/components/net_core/: CMakeLists.txt  README.md  net_core.c
newFirmware/components/net_mqtt/: CMakeLists.txt  (+3 more)
newFirmware/main/: CMakeLists.txt  Kconfig.projbuild  hardware_pin_config.h  main.c
pcb/terrasense/: fan.kicad_sch  liquid_level.kicad_sch  step_down.kicad_sch  terrasense.kicad_pcb  terrasense.kicad_prl  terrasense.kicad_pro
(+56 files in other folders)
